--- a/public/contact.html
+++ b/public/contact.html
@@ -2,7 +2,7 @@
 <p>Email: aslopez91@gmail.com</p>
 <p>Address:</p>
 <p>
-  500 Pacific Highway<br />
-  St Leonards, 2065<br />
+  Pacific Highway<br />
+  St Leonards<br />
   New South Wales, Australia<br />
 </p>
